--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Elizabeth M Wolkovich at 2025-10-20 19:52:52 +0200 
+%% Created for Deirdre at 2025-11-15 22:23:33 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{thornton2020,
+	author = {Thornton, M.M. and Shrestha, R. and Wei, Y. and Thornton, P.E. and Kao, S-C.},
+	date-added = {2025-11-15 22:22:11 -0800},
+	date-modified = {2025-11-15 22:23:18 -0800},
+	doi = {10.3334/ORNLDAAC/1840},
+	keywords = {ATMOSPHERE, ATMOSPHERIC TEMPERATURE, SURFACE TEMPERATURE, MAXIMUM/MINIMUM TEMPERATURE, ATMOSPHERE, ATMOSPHERIC RADIATION, SHORTWAVE RADIATION,, ATMOSPHERE, PRECIPITATION, SNOW WATER EQUIVALENT,, ATMOSPHERE, ATMOSPHERIC WATER VAPOR, WATER VAPOR INDICATORS, VAPOR PRESSURE, ATMOSPHERE, PRECIPITATION, PRECIPITATION AMOUNT, 24 HOUR PRECIPITATION AMOUNT, MODELS, Computer, temperature, daily surface weather, precipitation, snow water equivalent, vapor pressure, USA, Canada, Hawaii, Puerto Rico},
+	language = {en},
+	publisher = {ORNL Distributed Active Archive Center},
+	title = {Daymet: Daily Surface Weather Data on a 1-km Grid for North America, Version 4},
+	url = {https://daac.ornl.gov/cgi-bin/dsviewer.pl?ds_id=1840},
+	year = {2020},
+	bdsk-url-1 = {https://daac.ornl.gov/cgi-bin/dsviewer.pl?ds_id=1840},
+	bdsk-url-2 = {https://doi.org/10.3334/ORNLDAAC/1840}}
 
 @article{heberling2019,
 	author = {Heberling, J. Mason and Cassidy, Steven T. and Fridley, Jason D. and Kalisz, Susan},
