--- a/docs/supple.Rnw
+++ b/docs/supple.Rnw
@@ -37,7 +37,7 @@
 \subsubsection{The Common Garden}
 % emwJuly22: do you want to cite Baskin^2 for 'germination protocols.' 
 In 2014-2015, we collected seeds %of 18 species woody plants from multiple parent plants at
-from four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 71.40$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 71.15$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back the the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish the Common garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
+from four field sites in eastern Northern America spanning approximately a 3.5 degree latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 71.40$^{\circ}$W), Second College Grant of Dartmouth College (44.79$^{\circ}$N, 71.15$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back to the Weld Hill Research Building at the Arnold Arboretum in Boston MA (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish the Common garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
 
 Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides}, \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses included an average of 14 individuals per species. Our statistical analyses account for the unbalanced design that is frequently occurs in common gardens and other provenance trials (CITE).
 
@@ -118,7 +118,7 @@ Species & functional group & $n$ \\
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/fullgrowingseason_modplots.jpeg} 
-    \caption{The relationship between the day of leafout and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The trend lines represent the median effect of leafout timing on growing season length and shaded bars the 90\% uncertaintly interval. Points in a), and c) represent the raw data.}
+    \caption{The relationship between the day of leafout and growing season length (defined by leaf coloration) differs between the calendar growing season and the thermal growing season. Later leafout did not affect calendar growing season (a) but this pattern varied across species in our study (b). Increasingly later leafout resulted in a longer thermal growing season (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The trend lines represent the median effect of leafout timing on growing season length and shaded bars the 90\% uncertainty interval. Points in a), and c) represent the raw data.}
     \label{fig:leafrel}
 \end{figure}
 
